Add troops and basic communication with kingdom to simulation